fix java 8 compatibility issues report on error codes and metrics in json format